force-app/main/default/objects/mcdm_15__DMAsyncSendMemberError__c/mcdm_15__DMAsyncSendMemberError__c.object-meta.xml
<CustomObject>
    <label>DM Async Send Member Error</label>
    <nameField>
        <label>DM Async Send Member Error Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DM Async Send Member Error Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>