force-app/main/default/objects/mcdm_15__DMAsyncSendMemberError__c/fields/mcdm_15__Campaign_Member_Id__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Campaign_Member_Id__c</fullName>
    <label>Campaign Member Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>