force-app/main/default/objects/mcdm_15__DMAsyncSendMemberError__c/fields/mcdm_15__DM_Auto_Send__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__DM_Auto_Send__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DM Auto Send</label>
    <referenceTo>mcdm_15__DM_Auto_Send__c</referenceTo>
    <relationshipLabel>DM Send Logs</relationshipLabel>
    <relationshipName>DM_Send_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>