force-app/main/default/objects/mcdm_15__DMAsyncSendMemberError__c/fields/mcdm_15__DM_Error__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__DM_Error__c</fullName>
    <label>DM Error</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>