force-app/main/default/objects/mcdm_15__DMAsyncSendMemberError__c/fields/mcdm_15__JourneyApprovalState__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__JourneyApprovalState__c</fullName>
    <label>Journey Approval State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>